# freeswitch-esl-tokio

./: .gitignore  .gitleaks.toml  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: release.md
.github/workflows/: ci.yml
bench/: Makefile  README.md  bgapi_bench_c.c
docs/: command-builders.md  design-rationale.md  dial-string-format.md  freeswitch-directory-users.md  reexec.md  typed-wrapper-design.md
examples/: bgapi_bench.rs  channel_tracker.rs  codec_monitor.rs  event_filter.rs  event_listener.rs  inbound_client.rs  originate_examples.rs  outbound_server.rs  outbound_test.rs  reconnecting_client.rs  reexec_demo.rs
freeswitch-types/: Cargo.toml  README.md
freeswitch-types/src/: channel.rs  event.rs  headers.rs  lib.rs  lookup.rs  lossy_values.rs  macros.rs  prelude.rs  sip_header.rs  sip_header_addr.rs  sip_message.rs  wire_safety.rs
freeswitch-types/src/commands/: bridge.rs  channel.rs  conference.rs  mod.rs  originate.rs
freeswitch-types/src/commands/endpoint/: audio.rs  error.rs  group_call.rs  loopback.rs  mod.rs  sofia.rs  user.rs
freeswitch-types/src/conference_info/: mod.rs
freeswitch-types/src/sofia/: event_subclass.rs  gateway.rs  mod.rs  sip_user.rs
freeswitch-types/src/variables/: core.rs  core_media.rs  esl_array.rs  esl_headers.rs  mod.rs  sip_call_info.rs  sip_geolocation.rs  sip_header_addr.rs  sip_history_info.rs  sip_invite.rs  sip_multipart.rs  sip_passthrough.rs  sofia.rs
hooks/: check-call-states.sh  check-channel-states.sh  check-core-media-vars.sh  check-enums.py  check-event-types.sh  check-hangup-causes.sh  check-sip-header-prefixes.sh  check-sip-invite-headers.sh  pre-commit
scripts/: check-variable-coverage.sh  extract-freeswitch-variables.sh
src/: bgjob.rs  buffer.rs  channel.rs  command.rs  connection.rs  constants.rs  error.rs  event.rs  headers.rs  lib.rs  lookup.rs  macros.rs  protocol.rs
src/app/: dptools.rs  mod.rs
src/commands/: bridge.rs  channel.rs  conference.rs  endpoint.rs  mod.rs  originate.rs
src/commands/endpoint/: audio.rs  error.rs  group_call.rs  loopback.rs  mod.rs  sofia.rs  user.rs
src/variables/: channel_variable.rs  core.rs  mod.rs  sofia.rs
tests/: connection_tests.rs  integration_tests.rs  live_freeswitch.rs  mock_server.rs
