[package]
name = "freeswitch-esl-tokio"
version = "1.2.0"
edition = "2021"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "FreeSWITCH Event Socket Library (ESL) client for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ticpu/freeswitch-esl-tokio"
documentation = "https://docs.rs/freeswitch-esl-tokio"
keywords = ["freeswitch", "esl", "voip", "telephony"]
categories = ["network-programming", "api-bindings"]
readme = "README.md"
rust-version = "1.70"
exclude = ["CLAUDE.md", "hooks/", "tests/", "docs/"]

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "time", "macros"] }
bytes = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
percent-encoding = "2"
tracing = "0.1"
futures-util = "0.3"
indexmap = "2"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "inbound_client"
path = "examples/inbound_client.rs"

[[example]]
name = "outbound_server"
path = "examples/outbound_server.rs"

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"

[[example]]
name = "event_filter"
path = "examples/event_filter.rs"

[[example]]
name = "outbound_test"
path = "examples/outbound_test.rs"

[[example]]
name = "channel_tracker"
path = "examples/channel_tracker.rs"
