[workspace]
members = [".", "freeswitch-types"]
resolver = "2"

[package]
name = "freeswitch-esl-tokio"
version = "2.0.0-beta.4"
edition = "2021"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "FreeSWITCH Event Socket Library (ESL) client for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ticpu/freeswitch-esl-tokio"
documentation = "https://docs.rs/freeswitch-esl-tokio"
keywords = ["freeswitch", "esl", "voip", "tokio", "telephony"]
categories = ["network-programming", "api-bindings"]
readme = "README.md"
rust-version = "1.70"
exclude = ["CLAUDE.md", "hooks/", "tests/", "docs/"]

[dependencies]
freeswitch-types = { path = "freeswitch-types", version = "0.17" }
tokio = { version = "1.0", features = ["net", "io-util", "rt", "rt-multi-thread", "sync", "time", "macros"] }
bytes = "1.0"
thiserror = "2.0"
serde_json = "1.0"
quick-xml = { version = "0.39", features = ["serialize"] }
percent-encoding = "2"
tracing = "0.1"
futures-util = "0.3"

[dev-dependencies]
tracing-subscriber = "0.3"
nix = { version = "0.31", features = ["fs"] }

[[example]]
name = "inbound_client"
path = "examples/inbound_client.rs"

[[example]]
name = "outbound_server"
path = "examples/outbound_server.rs"

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"

[[example]]
name = "event_filter"
path = "examples/event_filter.rs"

[[example]]
name = "outbound_test"
path = "examples/outbound_test.rs"

[[example]]
name = "channel_tracker"
path = "examples/channel_tracker.rs"

[[example]]
name = "originate_examples"
path = "examples/originate_examples.rs"

[[example]]
name = "reexec_demo"
path = "examples/reexec_demo.rs"

[[example]]
name = "reconnecting_client_demo"
path = "examples/reconnecting_client.rs"

[[example]]
name = "codec_monitor"
path = "examples/codec_monitor.rs"

[[example]]
name = "bgapi_bench"
path = "examples/bgapi_bench.rs"
