[package]
name = "freeswitch-types"
version = "0.22.1"
edition = "2021"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "FreeSWITCH ESL protocol types: channel state, events, headers, commands, and variables"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ticpu/freeswitch-esl-tokio"
documentation = "https://docs.rs/freeswitch-types"
keywords = ["freeswitch", "esl", "voip", "telephony", "sip"]
categories = ["network-programming", "api-bindings"]
readme = "README.md"
rust-version = "1.70"
exclude = ["CLAUDE.md"]

[features]
default = ["serde", "esl"]
serde = ["dep:serde", "sip-header/serde", "indexmap?/serde"]
esl = ["dep:indexmap"]
conference-info = ["sip-header/conference-info"]

[dependencies]
sip-header = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
percent-encoding = "2"
indexmap = { version = "2", optional = true }

[dev-dependencies]
serde_json = "1.0"
